--- a/app/src/main/res/layout/activity_addnotactivity.xml
+++ b/app/src/main/res/layout/activity_addnotactivity.xml
@@ -18,7 +18,7 @@
     android:layout_marginTop="20dp"
     android:layout_width="match_parent"
     android:layout_height="0.1dp"
-    android:background="@color/titleblack"
+    android:background="@color/gray"
     />
     <LinearLayout
         android:id="@+id/lin_start_time"
@@ -47,13 +47,13 @@
         <ImageView
             android:src="@drawable/jiantou"
             android:layout_gravity="center_vertical"
-            android:layout_width="25dp"
-            android:layout_height="25dp" />
+            android:layout_width="15dp"
+            android:layout_height="15dp" />
     </LinearLayout>
     <View
         android:layout_width="match_parent"
         android:layout_height="0.1dp"
-        android:background="@color/titleblack"
+        android:background="@color/gray"
         />
 
 
@@ -61,7 +61,7 @@
         android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="0.1dp"
-        android:background="@color/titleblack"
+        android:background="@color/gray"
         />
     <LinearLayout
         android:id="@+id/lin_end_time"
@@ -90,13 +90,13 @@
         <ImageView
             android:src="@drawable/jiantou"
             android:layout_gravity="center_vertical"
-            android:layout_width="25dp"
-            android:layout_height="25dp" />
+            android:layout_width="15dp"
+            android:layout_height="15dp" />
     </LinearLayout>
     <View
         android:layout_width="match_parent"
         android:layout_height="0.1dp"
-        android:background="@color/titleblack"
+        android:background="@color/gray"
         />
 
 
@@ -124,7 +124,7 @@
         android:layout_gravity="center"
         android:layout_marginHorizontal="15dp"
         android:textColor="#ffffff"
-        android:textSize="12sp"
+        android:textSize="16sp"
         >
 
     </Button>
