--- a/app/src/main/res/layout/item_notbook.xml
+++ b/app/src/main/res/layout/item_notbook.xml
@@ -32,8 +32,8 @@
             android:id="@+id/img_del"
             android:layout_marginRight="10dp"
             android:src="@drawable/shanchu"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:layout_width="13dp"
+            android:layout_height="13dp"
             android:layout_gravity="center_vertical"
             />
     </LinearLayout>
@@ -41,6 +41,6 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.1dp"
-        android:background="@color/titleblack"
+        android:background="@color/gray"
         />
 </LinearLayout>
