--- a/app/src/main/res/layout/fragmnet_message.xml
+++ b/app/src/main/res/layout/fragmnet_message.xml
@@ -3,9 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/message"
-        />
+   <android.support.v7.widget.RecyclerView
+       android:id="@+id/rec_main"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
+
+   </android.support.v7.widget.RecyclerView>
 </LinearLayout>
