--- a/app/src/main/res/menu/bootom_navigation_tab.xml
+++ b/app/src/main/res/menu/bootom_navigation_tab.xml
@@ -13,4 +13,9 @@
         android:icon="@drawable/ic_person_outline_black_24dp"
         android:title="联系人"/>
 
+    <item
+        android:id="@+id/tab_thire"
+        android:icon="@drawable/ic_toys_black_24dp"
+        android:title="好友动态"/>
+
 </menu>
